# autoseguro-agent-quote

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/skills/pii-safety/: SKILL.md
.claude/skills/quote-api-resilience/: SKILL.md
agent-service/: Dockerfile  README.md  pyproject.toml
agent-service/app/: agent.py  extraction.py  handoff.py  llm_client.py  main.py  observability.py  pii.py  quote_client.py  store.py
agent-service/eval/: eval_set.jsonl
agent-service/scripts/: build_eval_set.py  demo_conversa.py  eval_agent.py  eval_extraction.py
agent-service/tests/: test_agent.py  test_extraction.py  test_handoff.py  test_observability.py  test_pii.py  test_quote_client.py  test_quote_client_integration.py  test_store.py  test_webhook.py
dataset/: DICIONARIO.md  conversations.parquet  sample.jsonl
docs/: challenge.prd
openspec/changes/add-quote-agent/: design.md  proposal.md  tasks.md
openspec/changes/add-quote-agent/specs/quote-resilience/: spec.md
openspec/changes/archive/2026-07-21-add-quote-agent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-add-quote-agent/specs/conversation-agent/: spec.md
openspec/specs/conversation-agent/: spec.md
openspec/specs/handoff-policy/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/pii-protection/: spec.md
openspec/specs/quote-resilience/: spec.md
quote-service/: Dockerfile  pyproject.toml
quote-service/app/: main.py  quote_logic.py
quote-service/data/: plans.json
scripts/: generate_dataset.py
(+3 files in other folders)
