[project]
name = "autoseguro-quote-agent"
version = "0.1.0"
description = "Agente de cotacao de seguro auto via WhatsApp (desafio FDE Namastex)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: sobe o quote-service real como subprocesso (mais lento, requer uv)",
]
addopts = "-m 'not integration'"
